# playerctl

./: .clang-format  .dockerignore  .flake8  .gitignore  .travis.yaml  .travis.yml  CHANGELOG.md  CONTRIBUTORS  Dockerfile  Makefile  Makefile.am  README.md  autogen.sh  compile_commands.json  configure.ac  example.py  fpm-deb.sh  fpm-packages.sh  git.mk  letter-to-spotify-support.md  meson.build  meson_options.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
completions/: completions.bash  meson.build  playerctl.bash
data/: meson.build  mpris-dbus-interface.xml  org.mpris.MediaPlayer2.playerctld.service.in  playerctl.zsh  playerctld.desktop  playerctld.service
data/test/: dbus-system.conf
doc/: Makefile.am  meson.build  playerctl.1  playerctl.1.in
doc/reference/: Makefile.am  meson.build  playerctl-docs.xml  version.xml.in
examples/: basic-example.py  manager.py  notify.py  player-manager.py
playerctl/: Makefile.am  marshal.list  meson.build  mpris-dbus-interface.xml  playerctl-cli.c  playerctl-common.c  playerctl-common.h  playerctl-daemon.c  playerctl-enum-types.c.in  playerctl-enum-types.h.in  playerctl-formatter.c  playerctl-formatter.h  playerctl-name-watcher.c  playerctl-name-watcher.h  playerctl-player-manager.c  playerctl-player-manager.h  playerctl-player-name.c  playerctl-player-name.h  playerctl-player-private.h  playerctl-player.c  playerctl-player.h  playerctl-rc.c  playerctl-rc.h  playerctl-version.h.in  playerctl.h  playerctl.pc.in  playerctl.syms
snap/: snapcraft.yaml
test/: Dockerfile  Makefile  conftest.py  mpris.py  playerctl.py  requirements.txt  test_basics.py  test_commands.py  test_daemon.py  test_follow.py  test_format.py  test_player_selection.py  test_selection.py
test/t/: test_basics.py  test_commands.py
